samples/_failures_safe/1761333370_1574b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_434655ae.c: In function ‘main’:
./samples/SAFE/__tmp_434655ae.c:147:12: error: missing terminating " character
  147 |     printf("Available events: 0=START, 1=DATA, 2=PROCESS, 3=SU
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_434655ae.c:147:5: error: expected expression at end of input
  147 |     printf("Available events: 0=START, 1=DATA, 2=PROCESS, 3=SU
      |     ^~~~~~
./samples/SAFE/__tmp_434655ae.c:147:5: error: expected declaration or statement at end of input
